--- a/inception/srcs/requirements/nginx/conf/nginx.conf
+++ b/inception/srcs/requirements/nginx/conf/nginx.conf
@@ -12,7 +12,7 @@ server {
     # WordPress PHP 처리 설정
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass containerWordPress+PHP:9000;
+        fastcgi_pass containerwordpressphp:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
