--- a/inception/srcs/requirements/wordpress/conf/www.conf
+++ b/inception/srcs/requirements/wordpress/conf/www.conf
@@ -4,7 +4,7 @@ group = www-data
 listen = 9000
 listen.owner = www-data
 listen.group = www-data
-listen.allowed_clients = containerNGINX
+listen.allowed_clients = containernginx
 pm = dynamic
 pm.max_children = 5
 pm.start_servers = 2
