--- a/testcept/srcs/requirements/mariadb/conf/50-server.cnf
+++ b/testcept/srcs/requirements/mariadb/conf/50-server.cnf
@@ -3,6 +3,7 @@ user			= mysql
 pid-file        = /var/run/mysqld/mysqld.pid
 socket          = /var/run/mysqld/mysqld.sock
 datadir         = /var/lib/mysql
-secure_file_priv= NULL
+#secure_file_priv= NULL
 
-# 기타 필요한 설정을 여기에 추가하십시오.
+bind-address	= 0.0.0.0
+
